# LibyuvDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lesliefang/libyuvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  YuvJni.cpp
app/src/main/java/com/lesliefang/libyuvdemo/: BitmapSurfaceView.java  MainActivity.java
app/src/main/java/com/libyuv/util/: YuvUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/lesliefang/libyuvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
